[package]
name = "bucket-queue"
version = "0.1.0"
edition = "2021"
authors = ["igs"]
description = "A simple but fast bucket queue implementation"
repository = "https://www.github.com/iggedi-ig-ig/bucket-queue"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
